fix the comment box being too wide and looking off-kilter

--- a/view/theme/dispy/style.css
+++ b/view/theme/dispy/style.css
@@ -1256,7 +1256,7 @@ section {
 }
 [class^="comment-edit-text"] {
     margin: 5px 0 10px 20px;
-    width: 86.5%;
+    width: 84.5%;
 }
 .comment-edit-text-empty {
 	height: 20px;
